compiler warnings (valueOf instead of new Byte(),Double()... )
Signed-off-by: Radek Felcman <radek.felcman@oracle.com>