@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -171,10 +171,10 @@ public class PerformanceComparisonTestResult extends TestResult {
             // Set the test average count as the test time.
             this.setAverageTestCount((long)testAverage);
 
-            this.testAverages.add(new Double(testAverage));
+            this.testAverages.add(Double.valueOf(testAverage));
             this.testMins.add(PerformanceComparisonTestResult.minResults(times));
             this.testMaxs.add(PerformanceComparisonTestResult.maxResults(times));
-            this.testStandardDeviations.add(new Double(testStandardDeviation));
+            this.testStandardDeviations.add(Double.valueOf(testStandardDeviation));
 
             if (testIndex > 0) {
                 double testBaseLineAverage = ((Number)this.testAverages.get(0)).doubleValue();
@@ -182,7 +182,7 @@ public class PerformanceComparisonTestResult extends TestResult {
                 // Difference
                 double percentageDifference =
                     PerformanceComparisonTestResult.percentageDifference(testAverage, testBaseLineAverage);
-                this.percentageDifferences.add(new Double(percentageDifference));
+                this.percentageDifferences.add(Double.valueOf(percentageDifference));
             }
         }
     }
@@ -215,7 +215,7 @@ public class PerformanceComparisonTestResult extends TestResult {
         if (getTestCounts().size() <= test) {
             getTestCounts().add(new ArrayList());
         }
-        ((List)getTestCounts().get(test)).add(new Long(time));
+        ((List)getTestCounts().get(test)).add(Long.valueOf(time));
     }
 
     /**
@@ -295,7 +295,7 @@ public class PerformanceComparisonTestResult extends TestResult {
      * Compute the max of the results.
      */
     public static Number maxResults(List times) {
-        Number testMax = new Double(0);
+        Number testMax = Double.valueOf(0);
         for (int index = 0; index < times.size(); index++) {
             Number time = (Number)times.get(index);
             if (time.doubleValue() > testMax.doubleValue()) {
@@ -309,7 +309,7 @@ public class PerformanceComparisonTestResult extends TestResult {
      * Compute the min of the results.
      */
     public static Number minResults(List times) {
-        Number testMin = new Double(0);
+        Number testMin = Double.valueOf(0);
         for (int index = 0; index < times.size(); index++) {
             Number time = (Number)times.get(index);
             if ((testMin.doubleValue() == 0) || (time.doubleValue() < testMin.doubleValue())) {
