@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -18,7 +18,7 @@ public class Boat extends NonFueledVehicle {
     public static Boat example1(Company company) {
         Boat example = new Boat();
 
-        example.setPassengerCapacity(new Integer(10));
+        example.setPassengerCapacity(Integer.valueOf(10));
         example.getOwner().setValue(company);
         return example;
     }
@@ -26,7 +26,7 @@ public class Boat extends NonFueledVehicle {
     public static Boat example2(Company company) {
         Boat example = new Boat();
 
-        example.setPassengerCapacity(new Integer(20));
+        example.setPassengerCapacity(Integer.valueOf(20));
         example.getOwner().setValue(company);
         return example;
     }
@@ -34,7 +34,7 @@ public class Boat extends NonFueledVehicle {
     public static Boat example3(Company company) {
         Boat example = new Boat();
 
-        example.setPassengerCapacity(new Integer(30));
+        example.setPassengerCapacity(Integer.valueOf(30));
         example.getOwner().setValue(company);
         return example;
     }
