@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -381,9 +381,9 @@ public ClassDescriptor buildPowerSupplyUnitClassDescriptor() {
     onMapping.setAttributeName("on");
     onMapping.setFieldName("on->DIRECT");
     ObjectTypeConverter onMappingConverter = new ObjectTypeConverter();
-    onMappingConverter.setDefaultAttributeValue(new java.lang.Boolean("false"));
-    onMappingConverter.addConversionValue(new Character('F'), new java.lang.Boolean("false"));
-    onMappingConverter.addConversionValue(new Character('T'), new java.lang.Boolean("true"));
+    onMappingConverter.setDefaultAttributeValue(Boolean.valueOf("false"));
+    onMappingConverter.addConversionValue(Character.valueOf('F'),Boolean.valueOf("false"));
+    onMappingConverter.addConversionValue(Character.valueOf('T'),Boolean.valueOf("true"));
     onMapping.setConverter(onMappingConverter);
     descriptor.addMapping(onMapping);
 
