@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -51,11 +51,11 @@ public class TestUpdateDirectEntityU1MMapMapping extends TestReadDirectEntityU1M
         UnitOfWork uow = getSession().acquireUnitOfWork();
         holders = uow.readAllObjects(DirectEntityU1MMapHolder.class, holderExp);
         changedHolder = (DirectEntityU1MMapHolder)holders.get(0);
-        changedHolder.removeDirectToEntityMapItem(new Integer(11));
+        changedHolder.removeDirectToEntityMapItem(Integer.valueOf(11));
         EntityMapValue mapValue = new EntityMapValue();
         mapValue.setId(3);
         mapValue = (EntityMapValue)uow.registerObject(mapValue);
-        changedHolder.addDirectToEntityMapItem(new Integer(33), mapValue);
+        changedHolder.addDirectToEntityMapItem(Integer.valueOf(33), mapValue);
         uow.commit();
         Object holderForComparison = uow.readObject(changedHolder);
         if (!compareObjects(changedHolder, holderForComparison)){
@@ -70,10 +70,10 @@ public class TestUpdateDirectEntityU1MMapMapping extends TestReadDirectEntityU1M
         if (!compareObjects(holder, changedHolder)){
             throw new TestErrorException("Objects do not match reinitialize");
         }
-        if (holder.getDirectToEntityMap().containsKey(new Integer(1))){
+        if (holder.getDirectToEntityMap().containsKey(Integer.valueOf(1))){
             throw new TestErrorException("Item that was removed is still present in map.");
         }
-        EntityMapValue value = (EntityMapValue)holder.getDirectToEntityMap().get(new Integer(33));
+        EntityMapValue value = (EntityMapValue)holder.getDirectToEntityMap().get(Integer.valueOf(33));
         if (value.getId() != 3){
             throw new TestErrorException("Item was not correctly added to map");
         }
