@@ -1309,8 +1309,8 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         int lastIndex = firstName.length();
         List employees = em.createQuery("SELECT object(e) FROM Employee e where e.firstName = substring(:p1, :p2, :p3)").
             setParameter("p1", firstName).
-            setParameter("p2", new Integer(firstIndex)).
-            setParameter("p3", new Integer(lastIndex)).
+            setParameter("p2", Integer.valueOf(firstIndex)).
+            setParameter("p3", Integer.valueOf(lastIndex)).
             getResultList();
 
         // clean up
@@ -5839,17 +5839,17 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         assertTrue("FETCH_GROUP not set.", olrQuery.getFetchGroup() == fetchGroup);
 
         // Timeout
-        query.setHint(QueryHints.JDBC_TIMEOUT, new Integer(100));
+        query.setHint(QueryHints.JDBC_TIMEOUT, Integer.valueOf(100));
         assertTrue("Timeout not set.", olrQuery.getQueryTimeout() == 100);
 
         // JDBC
-        query.setHint(QueryHints.JDBC_FETCH_SIZE, new Integer(101));
+        query.setHint(QueryHints.JDBC_FETCH_SIZE, Integer.valueOf(101));
         assertTrue("Fetch-size not set.", olrQuery.getFetchSize() == 101);
 
-        query.setHint(QueryHints.JDBC_MAX_ROWS, new Integer(103));
+        query.setHint(QueryHints.JDBC_MAX_ROWS, Integer.valueOf(103));
         assertTrue("Max-rows not set.", olrQuery.getMaxRows() == 103);
 
-        query.setHint(QueryHints.JDBC_FIRST_RESULT, new Integer(123));
+        query.setHint(QueryHints.JDBC_FIRST_RESULT, Integer.valueOf(123));
         assertTrue("JDBC_FIRST_RESULT not set.", olrQuery.getFirstResult() == 123);
 
         // Refresh
@@ -7410,7 +7410,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         em = createEntityManager();
         beginTransaction(em);
         try {
-            employee = em.find(Employee.class, new Integer(id));
+            employee = em.find(Employee.class, Integer.valueOf(id));
             address = employee.getAddress();
 
             assertTrue("The address was not persisted.", employee.getAddress() != null);
@@ -7452,7 +7452,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         int managerId = manager.getId();
 
         beginTransaction(em);
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         employee.getAddress();
 
         address = new Address();
@@ -7476,7 +7476,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         em = createEntityManager();
         beginTransaction(em);
 
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         address = employee.getAddress();
         manager = employee.getManager();
 
@@ -7486,8 +7486,8 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         assertTrue("The manager was not persisted.", employee.getManager() != null);
         assertTrue("The manager was not correctly persisted.", employee.getManager().getFirstName().equals("Metro"));
 
-        Address initialAddress = em.find(Address.class, new Integer(addressId));
-        Employee initialManager = em.find(Employee.class, new Integer(managerId));
+        Address initialAddress = em.find(Address.class, Integer.valueOf(addressId));
+        Employee initialManager = em.find(Employee.class, Integer.valueOf(managerId));
         employee.setAddress((Address)null);
         employee.setManager((Employee)null);
         em.remove(address);
@@ -7552,7 +7552,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         em = createEntityManager();
         beginTransaction(em);
 
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         address = employee.getAddress();
         manager = employee.getManager();
 
@@ -7562,8 +7562,8 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         assertTrue("The manager was not persisted.", employee.getManager() != null);
         assertTrue("The manager was not correctly persisted.", employee.getManager().getFirstName().equals("Metro"));
 
-        Address initialAddress = em.find(Address.class, new Integer(addressId));
-        Employee initialManager = em.find(Employee.class, new Integer(managerId));
+        Address initialAddress = em.find(Address.class, Integer.valueOf(addressId));
+        Employee initialManager = em.find(Employee.class, Integer.valueOf(managerId));
         employee.setAddress((Address)null);
         employee.setManager((Employee)null);
         em.remove(address);
@@ -7605,7 +7605,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         em = createEntityManager();
 
         beginTransaction(em);
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         employee.getAddress();
         employee.getManager();
 
@@ -7629,7 +7629,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
 
         em = createEntityManager();
         beginTransaction(em);
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         address = employee.getAddress();
         manager = employee.getManager();
 
@@ -7639,8 +7639,8 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         assertTrue("The manager was not persisted.", employee.getManager() != null);
         assertTrue("The manager was not correctly persisted.", employee.getManager().getFirstName().equals("Metro"));
 
-        Address initialAddress = em.find(Address.class, new Integer(addressId));
-        Employee initialManager = em.find(Employee.class, new Integer(managerId));
+        Address initialAddress = em.find(Address.class, Integer.valueOf(addressId));
+        Employee initialManager = em.find(Employee.class, Integer.valueOf(managerId));
 
         employee.setAddress((Address)null);
         employee.setManager((Employee)null);
@@ -8409,7 +8409,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
             errorMsg = errorMsg + "; em.getDelegate() threw wrong exception: " + ex.getMessage();
         }
         try {
-            em.getReference(Employee.class, new Integer(1));
+            em.getReference(Employee.class, Integer.valueOf(1));
             errorMsg = errorMsg + "; em.getReference() didn't throw exception";
         } catch(IllegalStateException ise) {
             // expected
