@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2019 IBM Corporation. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -786,8 +786,8 @@ public class JUnitJPQLComplexTestSuite extends JUnitTestCase
         Employee emp1 = (Employee) expectedResult.elementAt(0);
         Employee emp2 = (Employee) expectedResult.elementAt(1);
 
-        double salarySquareRoot1 = Math.sqrt((new Double(emp1.getSalary()).doubleValue()));
-        double salarySquareRoot2 = Math.sqrt((new Double(emp2.getSalary()).doubleValue()));
+        double salarySquareRoot1 = Math.sqrt((Double.valueOf(emp1.getSalary()).doubleValue()));
+        double salarySquareRoot2 = Math.sqrt((Double.valueOf(emp2.getSalary()).doubleValue()));
 
         String ejbqlString = "SELECT OBJECT(emp) FROM Employee emp WHERE ";
         ejbqlString = ejbqlString + salarySquareRoot1;
@@ -825,8 +825,8 @@ public class JUnitJPQLComplexTestSuite extends JUnitTestCase
         Employee emp1 = (Employee) expectedResult.elementAt(0);
         Employee emp2 = (Employee) expectedResult.elementAt(1);
 
-        double salarySquareRoot1 = Math.sqrt((new Double(emp1.getSalary()).doubleValue()));
-        double salarySquareRoot2 = Math.sqrt((new Double(emp2.getSalary()).doubleValue()));
+        double salarySquareRoot1 = Math.sqrt((Double.valueOf(emp1.getSalary()).doubleValue()));
+        double salarySquareRoot2 = Math.sqrt((Double.valueOf(emp2.getSalary()).doubleValue()));
 
         String ejbqlString = "SELECT OBJECT(emp) FROM Employee emp WHERE ";
         ejbqlString = ejbqlString + "(SQRT(emp.salary) = ";
@@ -1388,7 +1388,7 @@ public class JUnitJPQLComplexTestSuite extends JUnitTestCase
                 sum += e.getSalary();
             }
         }
-        LongHolder expectedResult = new LongHolder(new Long(sum), new Long(count));
+        LongHolder expectedResult = new LongHolder(Long.valueOf(sum), Long.valueOf(count));
 
         Assert.assertTrue("Constructor with aggregates argument Test Case Failed", result.equals(expectedResult));
     }
@@ -1405,7 +1405,7 @@ public class JUnitJPQLComplexTestSuite extends JUnitTestCase
             Collection managed = e.getManagedEmployees();
             if ((managed != null) && (managed.size() > 0)) {
                 EmployeeDetail d = new EmployeeDetail(
-                    e.getFirstName(), e.getLastName(), new Long(managed.size()));
+                    e.getFirstName(), e.getLastName(), Long.valueOf(managed.size()));
                 expectedResult.add(d);
             }
         }
@@ -2723,8 +2723,8 @@ public class JUnitJPQLComplexTestSuite extends JUnitTestCase
         em.persist(consumer);
         em.flush();
         List expectedResult = new ArrayList();
-        expectedResult.add(new Integer(0));
-        expectedResult.add(new Integer(1));
+        expectedResult.add(Integer.valueOf(0));
+        expectedResult.add(Integer.valueOf(1));
         clearCache();
         String ejbqlString = "select index(d) from EXPERT_CONSUMER e join e.designations d";
 
