@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -33,7 +33,7 @@ public class Employee implements CycleRecoverable {
 
         if (id < 1000) {
             // Return an object of a built-in Java type
-            return new Integer(this.id);
+            return Integer.valueOf(this.id);
         } else {
             // Return an object of a diffenet type (one that is known to this context)
             EmployeePointer p = new EmployeePointer();
