@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -43,7 +43,7 @@ public class AdapterWithElementsTestCases extends JAXBWithJSONTestCases {
         barC.a = "a";
         barC.b = "b";
         foo.collectionChoice.add(barC);
-        foo.collectionChoice.add(new Integer(123));
+        foo.collectionChoice.add(Integer.valueOf(123));
 
         return foo;
     }
