@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -18,7 +18,7 @@ import org.eclipse.persistence.testing.oxm.mappings.XMLMappingTestCases;
 
 public class TypeAttributeDoubleTestCases extends XMLMappingTestCases {
     private final static String XML_RESOURCE = "org/eclipse/persistence/testing/oxm/mappings/directtofield/typeattribute/TypeAttributeDouble.xml";
-    private final static Double CONTROL_ID = new Double(123.0);
+    private final static Double CONTROL_ID = Double.valueOf(123.0);
     private final static String CONTROL_FIRST_NAME = "Jane";
     private final static String CONTROL_LAST_NAME = "Doe";
 
