@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -230,7 +230,7 @@ public class SDODataObjectGetCharacterByPositionalPathTest extends SDODataObject
         ((SDOProperty)dataObject_c.getInstanceProperty(PROPERTY_NAME_C)).setType(SDOConstants.SDO_STRING);
 
         char str = 'c';
-        Character B_STR = new Character(str);
+        Character B_STR = Character.valueOf(str);
         dataObject_a.setString(propertyPath_a_b_c, B_STR.toString());// add it to instance list
 
         this.assertEquals(str, dataObject_a.getChar(property));
