@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -55,7 +55,7 @@ public class ProjectExporterTests extends RelationalProjectRunnerTests {
                                     deploymentFile.getAbsolutePath(),     // deploymentFileName
                                     "",
                                     ignoreErrorCodes,
-                                    new Boolean( true),     // failOnErrorObject
+                                    Boolean.valueOf( true),     // failOnErrorObject
                                     "jdbc:oracle:thin:@tlsvrdb5.ca.oracle.com:1521:TOPLINK",
                                     "oracle.jdbc.driver.OracleDriver",
                                     "tle", "");
