@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -162,7 +162,7 @@ public void setId(Integer newValue)
 
 public void setId(int newValue)
 {
-    setId(new Integer(newValue));
+    setId(Integer.valueOf(newValue));
 }
 
 /**
