@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -51,7 +51,7 @@ final class OpenRecentFileAction
         this.putValue(SHORT_DESCRIPTION, recentFile.getAbsolutePath());
         this.putValue(SMALL_ICON, ICON);
         if (count < 10) {
-            this.putValue(MNEMONIC_KEY, new Integer(countString.charAt(0)));
+            this.putValue(MNEMONIC_KEY, Integer.valueOf(countString.charAt(0)));
         }
     }
 
