@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -45,7 +45,7 @@ public interface MWJoinFetchableMapping {
     public static class JoinFetchOption extends TopLinkOption {
 
         public JoinFetchOption(String mwModelString, String externalString, int toplinkJoinFetchOption) {
-            super(mwModelString, externalString, new Integer(toplinkJoinFetchOption));
+            super(mwModelString, externalString, Integer.valueOf(toplinkJoinFetchOption));
         }
 
         public void setMWOptionOnTopLinkObject(Object mapping) {
